docs: restructure documentation index, create root README and conventions guide (#195)